# qtaskmachine

./: 404.html  CMakeLists.txt  README.md  docusaurus.config.ts  index.html  markdown-page.html  package.json  sidebars.ts  sitemap.xml
editor/: CMakeLists.txt  CPM.cmake  app.cpp  app.h  app.m.cpp  app.qrc  app.ui  appsettings.cpp  appsettings.h  main.cpp  myapplication.cpp  todolist.txt
editor/data/: basepropertydata.h  conditionstatepropdata.h  configflows.h  datakey.h  delaystatepropertydata.h  eventstatepropdata.h  loopstatepropdata.h  multieventstatepropdata.h  recoverystatepropdata.h  stategrouppropdata.h
editor/db/: entity.cmake  entity.pri  sqlite_entity.xml  sqliteentityinclude.cpp  sqliteentityinclude.h  viewcenter.cpp  viewcenter.h  viewcentermanager.cpp  viewcentermanager.h
editor/dialogs/: basepropertyeditdlg.cpp  basepropertyeditdlg.h  basepropertyeditdlg.ui  flownameeditdlg.cpp  flownameeditdlg.h  flownameeditdlg.ui  messagedlg.cpp  messagedlg.h  messagedlg.ui  nameeditdlg.cpp  nameeditdlg.h  nameeditdlg.ui  propertybindwidget.ui
editor/dialogs/nodeedit/: beginstatepropeditdlg.cpp  beginstatepropeditdlg.h  conditionbranchitem.ui  conditionstatepropeditdlg.cpp  conditionstatepropeditdlg.h  conditionstatepropex.ui  delaystatepropeditdlg.cpp  delaystatepropeditdlg.h  delaystatepropex.ui  endstatepropeditdlg.cpp  endstatepropeditdlg.h  eventstatepropeditdlg.cpp  eventstatepropeditdlg.h  eventstatepropex.ui  eventtriggerinput.ui  eventtriggerinputwidget.cpp  eventtriggerinputwidget.h  groupstatepropeditdlg.cpp  groupstatepropeditdlg.h  groupstatepropex.ui  loopstatepropeditdlg.cpp  loopstatepropeditdlg.h  loopstatepropex.ui  multieventstatepropeditdlg.cpp  multieventstatepropeditdlg.h  multieventstatepropex.ui  normalstatepropeditdlg.cpp  normalstatepropeditdlg.h  recoverystatepropeditdlg.cpp  recoverystatepropeditdlg.h  recoverystatepropex.ui
editor/graphic/: graphiccontrol.h  graphiclayer.cpp  graphiclayer.h  graphicobject.cpp  graphicobject.d.h  graphicobject.h  graphicobjecttype.h  graphicrender.cpp  graphicrender.h  graphicview.cpp  graphicview.h
editor/graphic/controls/: graphiclayercontrol.cpp  graphiclayercontrol.h  graphicobjcreatecontrol.cpp  graphicobjcreatecontrol.h  mouseactioncontrol.cpp  mouseactioncontrol.h  transformcontrol.cpp  transformcontrol.h
editor/graphic/layer/: activelinklinelayer.cpp  activelinklinelayer.h  activenodelayer.cpp  activenodelayer.h  assistalignmentlayer.cpp  assistalignmentlayer.h  commonnodelayer.cpp  (+9 more)
editor/remote/: backtrackdlg.cpp  backtrackdlg.h  backtrackdlg.ui  monitordlg.cpp  monitordlg.h  monitordlg.ui  protocol.h  remotecontrol.cpp  remotecontrol.h
editor/treeview/: configflowtreeview.cpp  configflowtreeview.h  configflowtreeview.m.cpp  styledmenu.cpp  styledmenu.h  treeviewitemmodel.cpp  treeviewitemmodel.h  treeviewitemnode.cpp  treeviewitemnode.h
editor/widget/: flowlayout.cpp  flowlayout.h
editor/widgets/: floatingtoolbar.cpp  floatingtoolbar.h  floatingtoolbar.ui
src/: CMakeLists.txt  QTaskMachinesConfig.cmake.in  conditionaltransition.h  delaystate.cpp  delaystate.h  directstate.cpp  directstate.h  groupstate.cpp  groupstate.h  linearstate.cpp  linearstate.h  staterecovery.cpp  staterecovery.h  targetsignaltransition.cpp  targetsignaltransition.h
src/pages/: index.tsx
src/remote/: protocol.h  remotedebuglistener.cpp  remotedebuglistener.h
src/state/: delaystate.cpp  delaystate.h  directstate.cpp  directstate.h  eventstate.cpp  eventstate.h  groupstate.cpp  groupstate.h  multieventstate.cpp  multieventstate.h
src/stateutils/: configflows.h  datakey.h  taskmachinerunner.cpp  taskmachinerunner.h  taskmachinesteputil.cpp  taskmachinesteputil.h
src/utils/: configflows.h  taskmachinerunner.cpp  taskmachinerunner.h
test/: CMakeLists.txt  demos.cpp  demos.h  demos.qrc  demos.ui  highlighter.cpp  highlighter.h  main.cpp  pageloadinterface.h  taskconfig.json
test/features/: conditionalstaterun1.h  conditionalstaterun2.h  conditionalstaterun3.h  conditionalstaterun4.h  conditionalstaterun5.h  conditionalstatetest.cpp  conditionalstatetest.h  conditionalstatetest.ui  debugstaterun.h  debugstatetest.cpp  debugstatetest.h  groupstaterun1.h  groupstaterun2.h  groupstatetest.cpp  groupstatetest.h  groupstatetest.ui  recoverstaterun.h  recoverstatetest.cpp  recoverstatetest.h  recoverstatetest.ui  targetlessstaterun.h  targetlessstatetest.cpp  targetlessstatetest.h  targetlessstatetest.ui
test/flow/: flowtest.cpp  flowtest.h  flowtest.ui
test/scene/: countdownrun.h  countdowntest.cpp  countdowntest.h  countdowntest.ui  signalparamscheckrun1.h  signalparamscheckrun2.h  signalparamschecktest.cpp  signalparamschecktest.h  signalparamschecktest.ui  signalpsceventtrigger.h
test/states/: delaystaterun.h  delaystatetest.cpp  delaystatetest.h  delaystatetest.ui  directstaterun.h  directstatetest.cpp  directstatetest.h  eventstaterun.h  eventstatetest.cpp  eventstatetest.h  eventstatetest.ui  groupstaterun.h  groupstatetest.cpp  groupstatetest.h  multieventstaterun.h  multieventstatetest.cpp  multieventstatetest.h  multieventstatetest.ui
tool/: CMakeLists.txt  app.cpp  app.h  app.m.cpp  app.ui  main.cpp  myapplication.h
tool/data/: configflows.h
tool/flowchart/: flowchartitemdata.cpp  flowchartitemdata.h  flowchartwidget.cpp  flowchartwidget.h
tool/res/: res.qrc
tool/subpage/: commonpropmanager.cpp  commonpropmanager.h  configconditionstate.cpp  configconditionstate.h  configconditionstate.ui  configdelaystate.cpp  configdelaystate.h  configdelaystate.ui  configeventstate.cpp  configeventstate.h  configeventstate.ui  configgroupstate.cpp  configgroupstate.h  configgroupstate.ui  confighistorystate.cpp  confighistorystate.h  confighistorystate.ui  configmultieventstate.cpp  configmultieventstate.h  configmultieventstate.ui  propertybindwidget.ui  stateconfiginterface.h
tool/utils/: curvemovecontrol.cpp  curvemovecontrol.h  flowstaterunner.cpp  flowstaterunner.h  xmath.cpp  xmath.h
tool/widgets/: flowlistitemdelegate.cpp  flowlistitemdelegate.h  statetypelistview.cpp  statetypelistview.h
(+268 files in other folders)
